...
    
    private func getExtraInfoTextFor(query: String, imageViewModels: [PhotoImageViewModel], loading: Bool) -> String? {
        if loading {
            return "Searching..."
        }
        if query.isEmpty {
            return "Please write something..."
        }
        if imageViewModels.isEmpty {
            return "No Result Found"
        }
        return nil
    }
    
    private func getExtraInfoIconFor(query: String, imageViewModels: [PhotoImageViewModel], loading: Bool) -> UIImage? {
        if loading {
...
