...
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="X1P-yo-TLM">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
            <subviews>
                <searchBar contentMode="redraw" placeholder="Search images..." translatesAutoresizingMaskIntoConstraints="NO" id="vSZ-6M-s3H" userLabel="SearchBar">
                    <rect key="frame" x="0.0" y="44" width="414" height="51"/>
                    <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                    <connections>
                        <outlet property="delegate" destination="-1" id="FXo-5f-9Zf"/>
                    </connections>
                </searchBar>
...
